Нужно улучшить получение статистики
